--- a/app/src/main/res/layout/activity_login_professor.xml
+++ b/app/src/main/res/layout/activity_login_professor.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".login_professor">
+
 
     <EditText
         android:id="@+id/editTextTextEmailAddressProfessor"
@@ -71,7 +74,7 @@
         app:layout_constraintEnd_toStartOf="@+id/logarProfessor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumberPasswordProfessor"
-        app:layout_constraintVertical_bias="0.223" />
+        app:layout_constraintVertical_bias="0.227" />
 
     <TextView
         android:id="@+id/textView12"
