--- a/app/src/main/res/layout/activity_resultadoquiz.xml
+++ b/app/src/main/res/layout/activity_resultadoquiz.xml
@@ -10,18 +10,17 @@
         android:id="@+id/textViewResultadoNome"
         android:layout_width="240dp"
         android:layout_height="42dp"
-        android:layout_marginStart="8dp"
         android:text="@string/txtViewNomeResultado"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textViewResultadoNome"
+        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintStart_toEndOf="@+id/textResultadoNome"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.129" />
 
     <TextView
-        android:id="@+id/textViewResultadoNome"
+        android:id="@+id/textResultadoNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="41dp"
